OVN v22.12.3 - xx xxx xxxx
--------------------------
  - ECMP routes use L4_SYM dp-hash by default if the datapath supports it.
    Existing sessions might get re-hashed to a different ECMP path when
    OVN detects the algorithm support in the datapath during an upgrade
    or restart of ovn-controller.

OVN v22.12.2 - 15 Sep 2023
--------------------------
  - Bug fixes

OVN v22.12.1 - 29 Aug 2023
--------------------------
   - Bug fixes
  - Always allow IPv6 Router Discovery, Neighbor Discovery, and Multicast
    Listener Discovery protocols, regardless of ACLs defined.
  - Send ICMP Fragmentation Needed packets back to offending ports when
    communicating with multichassis ports using frames that don't fit through a
    tunnel. This is done only for logical switches that are attached to a
    physical network via a localnet port, in which case multichassis ports may
    have an effective MTU different from regular ports and hence may need this
    mechanism to maintain connectivity with other peers in the network.
  - Add CoPP for the svc_monitor_mac. This addresses CVE-2023-3153.

OVN v22.12.0 - 16 Dec 2022
--------------------------
  - Add load balancer "affinity_timeout" option to configure load balancing
    of traffic from a particular client to the same backend for a given
    period of time.
  - ovn-northd: Add configuration knobs to enable drop sampling using OVS's
    per-flow IPFIX sampling.
  - Add support for component templates within logical flows and load
    balancers.
  - Add support for remote port mirroring (Experimental).
  - Add new OVN IC Route table index. This index ensures no duplicate routes
    can be advertized.  When upgrading to this version user must ensure that
    all ovn-ic daemons in all availability zones are upgraded before ovn-ic SB
    database schema is converted.

OVN v22.09.0 - 16 Sep 2022
--------------------------
  - ovn-controller: Add configuration knob, through OVS external-id